Added ef core and scyned to database

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Server=localhost\\sqlexpress;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -14,7 +17,7 @@
           "path": "./logs/log-.txt",
           "rollingInterval": "Day"
         }
-      }      
+      }
     ]
   },
   "AllowedHosts": "*"
